ligth html and css changes. films retrieval actually stops at 10 now and film insertion is actually in the head postion now.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 #Ignore auth.js, which contains client id and secret id.
 config/auth.js
-package.json
+#Ignore package.json and commit only package-lock.json
+/package.json
