--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Progetto Reti di Calcolatori",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "node server.js & node config/log.js"
   },
   "repository": {
     "type": "git",
